--- a/frontend/styles/doctorsdetails.css
+++ b/frontend/styles/doctorsdetails.css
@@ -22,3 +22,25 @@ header{
     width: 80%;
     height: 200px;
 }
+#booknow {
+    /* width: 50%; */
+    margin: auto;
+    margin-top: 3px;
+    padding: 10px 10px;
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    border: none;
+    background: linear-gradient(90deg ,#d9822b, #e15a53);
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  
+  
+  #booknow:hover {
+    background: linear-gradient(90deg, #e15a53, #d9822b);
+  }
+  #booknow:active {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 10px 10px, rgba(0, 0, 0, 0.12) 0px -12px 10px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  }
